chore: fix misalignment in UI

--- a/src/game/static/css/style.css
+++ b/src/game/static/css/style.css
@@ -102,7 +102,7 @@ header p {
 }
 
 .tutorial-title {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     color: var(--text-main);
     margin-bottom: 0.5rem;
     font-weight: 600;
@@ -205,7 +205,7 @@ header p {
 }
 
 .lives-count {
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     font-weight: 600;
     color: var(--text-main);
 }
@@ -625,7 +625,7 @@ input[type="text"]:focus {
     }
 
     .score-item .value {
-        font-size: 1rem;
+        font-size: 1.1rem;
         /* Smaller font to fit */
     }
 
